# Proyecto-Compiladores-2

./: README.md
Proyecto Compiladores 2/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  README.md  ast.cpp  ast.hpp  ast.tc  codigo.cpp  gramatica.y  main.cpp  prueba.txt  tokens.l
Proyecto Compiladores 2 (doctest)/: .gitignore  Lexer.cpp  Lexer.hpp  lex.yy.cpp  main.cpp  sample1.gv  tests.cpp  tokens.l
Proyecto Compiladores 2/doctest/: CMakeLists.txt  maindoctest.cpp
Proyecto Compiladores 2/ejemplos/: addition.c  addition_with_negative_numbers.c  and_before_or.c  and_both_false.c  and_both_true.c  and_first_false.c  and_second_false.c  and_with_non_zero_values.c  assignment_to_undeclared_variable.c  assignment_with_expression.c  block_with_statements.c  complex_logical_expression.c  count_digits_in_a_number.c  division_before_subtraction.c  division_by_zero.c  division_with_negative_numbers.c  double_1.c  double_negation.c  empty_block.c  equal_to_false_case.c  equal_to_true_case.c  exact_division.c  factorial_calculation.c  fibonacci_sequence_first_10_numbers.c  find_maximum_of_three_numbers.c  greater_than_false.c  greater_than_or_equal_equal.c  greater_than_or_equal_greater.c  greater_than_or_equal_less.c  greater_than_true.c  greatest_common_divisor.c  if_else_false_branch.c  if_else_if_else_pattern.c  if_else_true_branch.c  if_else_with_blocks.c  if_false_condition.c  if_true_condition.c  if_with_block.c  integer_division.c  left_associativity_of_division.c  (+59 more)
